Update and rename technical_requirements.md to 2. technical_requirements.md

--- a/2. technical_requirements.md
+++ b/2. technical_requirements.md
@@ -1,4 +1,4 @@
-# Technical Requirements Specification (technical_requirements.md)
+# Technical Requirements Specification
 
 ## 1. Functional Specifications (Given-When-Then Format)
 
