Update and rename clarifications.md to 3. clarifications.md

--- a/3. clarifications.md
+++ b/3. clarifications.md
@@ -1,4 +1,4 @@
-# Clarification Questions (clarifications.md)
+# Clarification Questions
 
 The following points require stakeholder confirmation to finalize the scope of the Document Management System (DMS):
 
