Update and rename traceability_matrix.md to 2. traceability_matrix.md

--- a/2. traceability_matrix.md
+++ b/2. traceability_matrix.md
@@ -1,4 +1,4 @@
-# Traceability Matrix (traceability_matrix.md)
+# Traceability Matrix
 
 This matrix maps original requirements and clarifications to finalized solution features across Options 1–3.
 
