--- a/1. dms-requirement-analysis.md
+++ b/1. dms-requirement-analysis.md
@@ -136,6 +136,36 @@ ComplianceHub DMS transforms document chaos into compliance confidence through a
 - **Engagement Analytics:** Understand document consumption
 - **Continuous Improvement:** Machine learning from usage patterns
 
+### 2.5 Tiered Options
+
+A **tiered, modular DMS platform** delivered in three option packages:
+
+#### Option 1: Entry-Level (Core Compliance)
+- Document lifecycle: draft, review, approval, publish
+- Version control & access permissions (internal/external)
+- Secure storage (50GB, up to 400MB per file)
+- Reader acknowledgment (“read & understood”)
+- Retention/archiving (7–10 years)
+- GDPR-compliant encryption & security firewall
+
+#### Option 2: Mid-Tier (Enhanced Compliance & Analytics)
+- All Option 1 features
+- Adobe Sign integration for e-signatures
+- Enhanced analytics (document status, reader behavior, usage trends)
+- Expanded storage (~100GB+)
+- Configurable workflows (multi-step approvals, reminders)
+- External access for auditors/partners
+
+#### Option 3: Advanced (Feature-Rich & Customizable)
+- All Option 1 + 2 features
+- OCR for live documents (searchable PDFs/images)
+- Advanced storage (150GB+)
+- Deeper integrations (ERP, CRM if needed)
+- Advanced security: MFA, role-based data masking
+- AI-assisted metadata tagging & smart search (future roadmap)
+- Custom branding & dashboards
+- Multi-cloud deployment (AWS, Azure, Google)
+
 ## 3. Core Functions & Capabilities
 
 ### 3.1 Document Lifecycle Management
